--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
-# Build and Release Folders
-bin/
-bin-debug/
-bin-release/
+# Logs
+logs
+*.log
+npm-debug.log*
 
-# Other files and folders
-.settings/
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Dependency directories
+node_modules
+jspm_packages
+bower_components
+
+
+# Optional npm cache directory
+.npm
+
+# distribution
+dist
