--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,6 @@
     "angular-ui-router": "^0.3.2",
     "angular-route": "^1.6.1",
     "ng-dialog": "^0.6.6",
-    "ui-bootstrap": "^2.4.0"
+    "angular-bootstrap": "^2.5.0"
   }
 }
