--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-ui-router": "^0.3.2",
     "angular-route": "^1.6.1",
     "ng-dialog": "^0.6.6",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "angular-tooltips": "^1.2.2"
   }
 }
