--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-route": "^1.6.1",
     "ng-dialog": "^0.6.6",
     "angular-bootstrap": "^2.5.0",
-    "angular-tooltips": "^1.2.2"
+    "angular-tooltips": "^1.2.2",
+    "checklist-model": "^0.11.0"
   }
 }
